Adding i18n with support to change at runtime

--- a/src/main/webapp/i18n/pt-BR.json
+++ b/src/main/webapp/i18n/pt-BR.json
@@ -1,13 +1,15 @@
 {
     "APPLICATION_NAME" : "Contatos",
-    "DEVELOPER_NAME" : "Developer: %s.",
-    "AUTH_TITLE" : "Login",
+    "DEVELOPER_NAME" : "Desenvolvedor: %s.",
+    "PORTUGUESE" : "Português",
+    "ENGLISH" : "Inglês",
+    "AUTH_TITLE" : "Antenticação",
     "USERNAME" : "Login",
     "PASSWORD" : "Senha",
     "LOGOUT" : "Desconectar",
-    "INVALID_EMAIL" : "This is not a valid email",
-    "INVALID_NUMBER_TRIES" : "This is not a valid number for Tries!",
-    "RANGE_0_3" : "The value must be in 0 to 3!",
+    "INVALID_EMAIL" : "Esse é um email inválido",
+    "INVALID_NUMBER_TRIES" : "Esse não é um número válido para o campo 'Tentativas'!",
+    "RANGE_0_3" : "O valor deve ser entre 0 e 3!",
     "CONTACTS" : "Contatos",
     "USERS" : "Usuários",
     "ROLES" : "Perfis",
