--- a/src/main/webapp/i18n/pt-BR.json
+++ b/src/main/webapp/i18n/pt-BR.json
@@ -1,9 +1,8 @@
 {
-    "APPLICATION_NAME" : "Contatos",
     "DEVELOPER_NAME" : "Desenvolvedor: %s.",
     "PORTUGUESE" : "Português",
     "ENGLISH" : "Inglês",
-    "AUTH_TITLE" : "Antenticação",
+    "AUTH_TITLE" : "Autenticação",
     "USERNAME" : "Login",
     "PASSWORD" : "Senha",
     "LOGOUT" : "Desconectar",
